<resources>
    <string name="app_name">EZ Schedule</string>
    <string name="current_date">Current Date</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="empty" />
    <string name="upcoming_events">일정목록</string>
    <string name="record_add">음성 일정 추가</string>
    <string name="user_settings">사용자 설정</string>
    <string name="calendar">캘린더</string>
    <string name="save_event">일정 저장</string>
    <string name="event">일정</string>
    <string name="event_title">일정 제목</string>
    <string name="add_a_location">장소 추가</string>
    <string name="add_people">참여자 추가</string>
    <string name="add_phone">연락처 추가</string>
    <string name="add">Add</string>
    <string name="add_from_contacts">주소록에서 추가</string>
    <string name="add_your_notes">내용추가</string>
    <string name="date">날짜</string>
    <string name="_06_apr_2020">06-Apr-2020</string>
    <string name="time">시각</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="duration_0_hours_0_minutes">일정지속: 0 시간 0 분</string>
    <string name="events">일정</string>
    <string name="add_event">일정 추가</string>
    <string name="no_event_to_display">표시할 일정이 없습니다.</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="note_color">표시색상</string>
    <string name="send_mail">메일로 보내기</string>
    <string name="week">주간</string>
    <string name="next_seven_days">오늘이후 7일</string>
    <string name="period">Period</string>
    <string name="all_period">모든 일정</string>
    <string name="today">오늘</string>
    <string name="next_7_days">오늘이후 7일</string>
    <string name="next_30_days">오늘이후 30일</string>
    <string name="all_events">모든 일정들</string>
    <string name="notification_preference">알람 설정</string>
    <string name="_10_minutes_before">10분전</string>
    <string name="_1_hour_before">1시간전</string>
    <string name="_1_day_before">1일전</string>
    <string name="at_the_time_of_event">일정시작시</string>
    <string name="back">BACK</string>
    <string name="share">공유하기</string>
    <string name="mail">이메일</string>
    <string name="ok">OK</string>
    <string name="one_time_event">1회 일정</string>
    <string name="add_notification">알람추가</string>
    <string name="repetition">반복주기</string>
    <string name="daily">매일</string>
    <string name="monthly">매월</string>
    <string name="weekly">매주</string>
    <string name="yearly">매년</string>
    <string name="one_time">1회</string>
    <string name="title_activity_maps">구글맵</string>
    <string name="default_info_title">Istanbul, Turkey</string>
    <string name="default_info_snippet">Current Location</string>
    <string name="select_this_location">Select this location</string>
    <string name="default_ringtone">기본알람음</string>
    <string name="default_reminder_time">알람 시작 시간</string>
    <string name="default_reminder_frequency">반복 주기</string>
    <string name="app_theme">테마</string>
    <string name="dark">Dark</string>
    <string name="indigo">Indigo</string>
    <string name="choose_theme">테마선택</string>
    <string name="ringtone">알람음</string>
    <string name="consequence">Consequence</string>
    <string name="juntos">Juntos</string>
    <string name="piece_of_cake">Piece of cake</string>
    <string name="point_blank">Point blank</string>
    <string name="slow_spring_board">Slow spring board</string>
    <string name="notifications">Notifications</string>
    <string name="don_t_forget_to_buy_a_gift">Don\'t forget to buy a gift</string>
    <string name="location">장소</string>
    <string name="event_details">일정상세</string>
</resources>
