<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?attr/Background"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/CalenderFragment_Header_Calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <!--메인 위치 색바꿈 android:background="@color/colorAccent" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">


            <ImageButton
                android:id="@+id/CalenderFragment_Button_Prev"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_back_white" />

            <TextView
                android:id="@+id/CalenderFragment_TextView_CurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/current_date"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/CalenderFragment_Button_Next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_forward_white" />

        </LinearLayout>
        <!--여기 색바꿈-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:orientation="horizontal"
            android:padding="1dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--월화수목금색바꿈-->
            <TextView
                android:id="@+id/CalenderFragment_TextView_Mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CalenderFragment_TextView_Tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CalenderFragment_TextView_Wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CalenderFragment_TextView_Thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CalenderFragment_TextView_Fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/CalenderFragment_TextView_Sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CalenderFragment_TextView_Sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <GridView
        android:id="@+id/CalenderFragment_GridView_Dates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/CalenderFragment_Header_Calendar"
        android:layout_marginTop="1dp"
        android:numColumns="7" />

</RelativeLayout>